--- a/myapp/templates/myapp/about.html
+++ b/myapp/templates/myapp/about.html
@@ -13,7 +13,7 @@
       <!-- Text Content -->
       <div class="flex-1">
         <h2 class="text-2xl font-semibold mb-4">
-          Hi, I'm <span class="text-blue-700">Sai</span> 👋
+          Hi, I'm <span class="text-blue-700">Sai Krishna Kotha</span> 👋
         </h2>
         <p class="text-gray-700 leading-relaxed mb-5">
           I'm a passionate full-stack web developer with a strong foundation in Django, JavaScript, and frontend frameworks like Tailwind CSS.
