style: add responsiveness in lg device

--- a/myapp/templates/myapp/skills.html
+++ b/myapp/templates/myapp/skills.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <section class="min-h-screen bg-gray-100 text-gray-900 py-16 px-4">
-  <div class="max-w-6xl mx-auto md:mx-4">
+  <div class="max-w-6xl px-6 md:mx-12 lg:px-16">
     <!-- Page Title -->
     <h1 class="text-4xl font-bold text-blue-600 mb-8 underline underline-offset-8 decoration-2">My Skills</h1>
 
