add porfolio project link

--- a/myapp/templates/myapp/projects.html
+++ b/myapp/templates/myapp/projects.html
@@ -48,7 +48,7 @@
             Responsive portfolio using Django and Tailwind CSS with smooth transitions, modular layout, and sections for showcasing projects.
 
           </p>
-          <a href="#" class="text-blue-500 hover:text-blue-700 font-semibold text-sm">View Project →</a>
+          <a href="https://kothasaikrishna-portfolio-website.onrender.com/" class="text-blue-500 hover:text-blue-700 font-semibold text-sm">View Project →</a>
         </div>
       </div>
       <!-- Project 4 - EasyAds Classified Portal -->
