--- a/myapp/templates/myapp/about.html
+++ b/myapp/templates/myapp/about.html
@@ -23,7 +23,7 @@
           My current focus is on enhancing my backend expertise with Django REST Framework and deploying scalable apps using platforms like Render and Vercel.
         </p>
         <a href="{% static 'docs/kothasaikrishna_resume.pdf' %}"
-           class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-semibold px-6 py-2 rounded-lg shadow transition duration-300" download="SaiKrishna_Resume.pdf">
+           class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-semibold px-6 py-2 rounded-lg shadow transition duration-300" download="KothaSaiKrishna_Resume.pdf">
           📄 Download Resume
         </a>
       </div>
