--- a/myapp/templates/myapp/home.html
+++ b/myapp/templates/myapp/home.html
@@ -27,7 +27,7 @@
 
     <!-- Button -->
     <a href="{% url 'myapp:contact' %}"
-       class="inline-block px-6 py-3 bg-blue-600 hover:bg-blue-700 text-white rounded-full font-semibold tracking-wide transition duration-300 shadow-md">
+       class="inline-block px-6 py-3 bg-blue-600 hover:bg-blue-700 active:bg-blue-300 text-white rounded-full font-semibold tracking-wide transition duration-300 shadow-md">
       CONNECT WITH ME
     </a>
   </div>
