--- a/myapp/templates/myapp/projects.html
+++ b/myapp/templates/myapp/projects.html
@@ -51,7 +51,7 @@
           <a href="https://kothasaikrishna-portfolio-website.onrender.com/" class="text-blue-500 hover:text-blue-700 font-semibold text-sm">View Project →</a>
         </div>
       </div>
-      <!-- Project 4 - EasyAds Classified Portal -->
+      <!-- Project 4 -->
       <div class="bg-white rounded-xl shadow-lg hover:shadow-2xl transform hover:scale-[1.03] transition duration-300">
         <img src="{% static 'images/ai_blog.png' %}" alt="AI Blog Generator" class="w-full h-40 object-cover object-top rounded-t-xl">
         <div class="p-6">
