--- a/myapp/templates/myapp/projects.html
+++ b/myapp/templates/myapp/projects.html
@@ -13,6 +13,17 @@
     
     <!-- Project Cards -->
     <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-10">
+		  <div class="bg-white rounded-xl shadow-lg hover:shadow-2xl transform hover:scale-[1.03] transition duration-300">
+	      <img src="{% static 'images/flutter_backend_api_integration.png' %}" alt="Flutter Backend API Integration" class="w-full h-40 object-cover object-top rounded-t-xl">
+	  	  <div class="p-6">
+		  <h2 class="text-xl font-semibold text-blue-500 mb-2">Flutter Backend API Integration</h2>
+		  <p class="text-gray-700 text-sm mb-4">
+		  Developed and integrated REST APIs using FastAPI and PostgreSQL for an existing Flutter frontend, implementing efficient data models and optimized API endpoints for scalable backend services.
+		  </p>
+		  <a href="https://github.com/sai-krishna-kotha/backend" class="text-blue-500 hover:text-blue-700 font-semibold text-sm" target="_blank">View Code →</a>
+	      </div>
+	</div>
+    
       <!-- Project 1 -->
       <div class="bg-white rounded-xl shadow-lg hover:shadow-2xl transform hover:scale-[1.03] transition duration-300">
           <img src="{% static 'images/easyads.png' %}" alt="EasyAds Portal" class="w-full h-40 object-cover object-top rounded-t-xl">
