--- a/myapp/templates/myapp/about.html
+++ b/myapp/templates/myapp/about.html
@@ -21,17 +21,11 @@
         <p class="text-gray-600 mb-6">
           My current focus is on enhancing my backend expertise with Django REST Framework and deploying scalable apps using platforms like Render and Vercel.
         </p>
-        <a href="{% static 'docs/kothasaikrishna_resume.pdf' %}"
-           id="resumeDownloadBtn" {# Added ID for JavaScript #}
+        <a href="https://drive.google.com/file/d/1R5RkpbhwUv9nabCkFZJ0kqFUgOrAVG_h/view?usp=drive_link"
            class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-semibold px-6 py-2 rounded-lg shadow transition duration-300"
            download="KothaSaiKrishna_Resume.pdf">
           📄 Download Resume
         </a>
-
-        {# Success Message - Initially hidden #}
-        <div id="downloadSuccessMessage" class="hidden mt-4 p-3 bg-green-100 border border-green-400 text-green-700 rounded-lg text-sm" role="alert">
-            Your resume has started downloading!
-        </div>
       </div>
 
       <div class="flex justify-center items-center">
@@ -43,7 +37,7 @@
       </div>
     </div>
 
-    <div class="mt-16">
+    {% comment %} <div class="mt-16">
       <h3 class="text-xl font-semibold text-blue-600 mb-4 underline underline-offset-4 decoration-2">Tech Stack</h3>
       <div class="flex flex-wrap gap-3">
         {% for tech in "Python,Django,Django REST Framework,JavaScript,Tailwind CSS,HTML5,CSS3,Git,Render"|split:',' %}
@@ -52,7 +46,7 @@
         </span>
         {% endfor %}
       </div>
-    </div>
+    </div> {% endcomment %}
   </div>
 </section>
 
