google search console verification

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <title>Portfolio | Saii</title>
     <link rel="stylesheet" href="{% static 'dist/build_styles.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <meta name="google-site-verification" content="VtmjrCOFnOTEWJ51MJv1MPGoY-zyaE3E4P_prQpLy24" />
 </head>
 <body class="pt-[64px] bg-gray-100">
     {% block nav_bar %}
