--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -40,7 +40,7 @@
     </div>
 
     <!-- Mobile Dropdown Menu -->
-<div id="mobile-menu" class="hidden md:hidden flex-col space-y-3 m-2 mt-0 p-4 pt-0 rounded-lg transition-all duration-300 ease-in-out">
+<div id="mobile-menu" class="hidden md:hidden h-screen flex-col space-y-3 m-2 mt-0 p-4 pt-0 rounded-lg transition-all duration-300 ease-in-out">
   {% for name in 'home,about,skills,blog,projects,achievements,contact'|split:',' %}
   {% if name != 'blog' %}
     {% with 'myapp:'|add:name as viewname %}
