--- a/myapp/templates/myapp/projects.html
+++ b/myapp/templates/myapp/projects.html
@@ -18,9 +18,9 @@
 	  	  <div class="p-6">
 		  <h2 class="text-xl font-semibold text-blue-500 mb-2">Flutter Backend API Integration</h2>
 		  <p class="text-gray-700 text-sm mb-4">
-		  Developed and integrated REST APIs using FastAPI and PostgreSQL for an existing Flutter frontend, implementing efficient data models and optimized API endpoints for scalable backend services.
+		  Developed and integrated REST APIs using FastAPI and PostgreSQL for an existing Flutter frontend, implementing optimized API endpoints for scalable backend services.
 		  </p>
-		  <a href="https://github.com/sai-krishna-kotha/backend" class="text-blue-500 hover:text-blue-700 font-semibold text-sm" target="_blank">View Code →</a>
+		  <a href="https://github.com/sai-krishna-kotha/backend" class="text-blue-500 hover:text-blue-700 font-semibold text-sm" target="_blank">View Code </a>
 	      </div>
 	</div>
     
@@ -30,10 +30,10 @@
           <div class="p-6">
           <h2 class="text-xl font-semibold text-blue-500 mb-2">EasyAds Classified Portal</h2>
           <p class="text-gray-700 text-sm mb-4">
-              Full-stack classified ads website built with Django, DRF, Tailwind, and deployed on Render. Developed during internship.
+              Full-stack classified ads website built with Django, Bootstrap, and deployed on Render. Developed during internship.
           </p>
-          <a href="https://easyads-9ch9.onrender.com/" target="_blank" class="text-blue-500 hover:text-blue-700 font-semibold text-sm">
-              View Project →
+          <a href="https://github.com/sai-krishna-kotha/myproject" target="_blank" class="text-blue-500 hover:text-blue-700 font-semibold text-sm">
+              View Code
           </a>
           </div>
       </div>
@@ -46,7 +46,7 @@
           <p class="text-gray-700 text-sm mb-4">
             A visual simulator for FCFS, SJF, Round Robin algorithms using JavaScript and Chart.js. Ideal for OS education.
           </p>
-          <a href="https://cpu-scheduling-simulator.onrender.com/" class="text-blue-500 hover:text-blue-700 font-semibold text-sm" target="">View Project →</a>
+          <a href="https://github.com/sai-krishna-kotha/cpu_scheduling_simulator" class="text-blue-500 hover:text-blue-700 font-semibold text-sm" target="">View Code </a>
         </div>
       </div>
 
@@ -59,7 +59,7 @@
             Responsive portfolio using Django and Tailwind CSS with smooth transitions, modular layout, and sections for showcasing projects.
 
           </p>
-          <a href="https://kothasaikrishna-portfolio-website.onrender.com/" class="text-blue-500 hover:text-blue-700 font-semibold text-sm">View Project →</a>
+          <a href="https://github.com/sai-krishna-kotha/myproject/" class="text-blue-500 hover:text-blue-700 font-semibold text-sm">View Code </a>
         </div>
       </div>
       <!-- Project 4 -->
@@ -70,7 +70,7 @@
           <p class="text-gray-700 text-sm mb-4">
             A dynamic platform that generates blog content using Cohere's API. Built with Django, Tailwind, and deployed on Render.
           </p>
-          <a href="https://ai-blog-app-qs73.onrender.com/" class="text-blue-500 hover:text-blue-700 font-semibold text-sm">View Project →</a>
+          <a href="https://github.com/sai-krishna-kotha/ai_blog_app" class="text-blue-500 hover:text-blue-700 font-semibold text-sm">View Code </a>
         </div>
       </div>
       <!-- Add more cards here -->
