--- a/myapp/templates/myapp/about.html
+++ b/myapp/templates/myapp/about.html
@@ -21,7 +21,7 @@
         <p class="text-gray-600 mb-6">
           My current focus is on enhancing my backend expertise with Django REST Framework and deploying scalable apps using platforms like Render and Vercel.
         </p>
-        <a href="https://drive.google.com/file/d/1R5RkpbhwUv9nabCkFZJ0kqFUgOrAVG_h/view?usp=drive_link"
+        <a href="https://drive.google.com/file/d/1GzsY04eMWNIZq6kNcMdZpuau4UqV_58q/view?usp=drivesdk"
            id="resumeDownloadBtn" {# Added ID for JavaScript #}
            class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-semibold px-6 py-2 rounded-lg shadow transition duration-300"
            download="KothaSaiKrishna_Resume.pdf">
